# normalize-japanese-address

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.py  test_runner.py
normalize-japanese-address/lib/: cacheRegexes.py  const.py  dict.py  kan2num.py  normalize.py  num2kan.py  patch_addr.py  zen2han.py
normalize_japanese_address/: __init__.py  normalize.py
normalize_japanese_address/lib/: cacheRegexes.py  config.py  const.py  dict.py  kan2num.py  num2kan.py  patch_addr.py
normalize_japanese_address/tests/: test_normalize_japanese_address.py
original/: config.js  config.ts  main.js  main.ts
original/lib/: cacheRegexes.js  cacheRegexes.ts  dict.ts  kan2num.ts  patchAddr.ts  zen2han.ts
original/test/: addresses.csv  addresses.test.ts  build-test-data.ts  main.test.ts
tests/: test_normalize-japanese-address.py
