[tool.poetry]
name = "normalize_japanese_address"
version = "0.0.8"
authors = ["SAWADA takahiro <saw@computer.org>"]
description = "To normalize Japanese address."
license = "MIT"
homepage = "https://github.com/fanannan/normalize-japanese-address"
repository = "https://github.com/fanannan/normalize-japanese-address"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
kanjize = "^1.0.0"
mojimoji = "^0.0.11"
requests = "^2.25.1"
pytest = "^6.2.4"
neologdn = "^0.5.1"
orjson = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
