[tool.poetry]
name = "normalize_japanese_address"
version = "0.0.11"
authors = ["SAWADA takahiro <saw@computer.org>"]
description = "To standardize Japanese addresses by separating them into sets of prefecture, city, town, and additional details"
license = "MIT"
homepage = "https://github.com/fanannan/normalize-japanese-address"
repository = "https://github.com/fanannan/normalize-japanese-address"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
kanjize = "^1.0.0"
mojimoji = "^0.0.12"
requests = "^2.25.1"
neologdn = "^0.5.1"
orjson = "^3.5.3"
nose = "^1.3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = {version = "^23.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
